--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "framer-motion": "^11.3.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
